--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ html, body{
     font-family: Arial, Helvetica, sans-serif;
 
 }
+body{
+    font-size: 1.61 rem;
+}
 code{
     font-family: consolas;
     color: rgba(0, 0, 0, 0.808);
